Creando Alert para Verificar fechaInico de una Evaluacion

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,7 +1,7 @@
 {
  
     "development": {
-        "username": "Andres",
+        "username": "postgres",
         "password": 1234,
         "database": "mi_crediudo",
         "host": "127.0.0.1",
