--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "multer": "^1.4.1",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
